Removed duplicat color attribute

--- a/src/app/admin/login-dialog/login-dialog.component.html
+++ b/src/app/admin/login-dialog/login-dialog.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="mdl-dialog-actions" style="text-align: center">
-    <button md-raised-button color="primary" type="submit" [disabled]="!loginForm.valid" color="primary">Login</button>
+    <button md-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Login</button>
     <button md-button md-dialog-close=false color="warn">Cancel</button>
   </div>
 </form>
