--- a/src/app/admin/login-dialog/login-dialog.component.html
+++ b/src/app/admin/login-dialog/login-dialog.component.html
@@ -1,5 +1,5 @@
 <h1 class="mdl-dialog-title" style="text-align: center">App Login</h1>
-<div style="text-align:center; color:#f44336" *ngIf="loginWarning">User Name and/or Password is not recognised</div>
+<div class="warn" *ngIf="loginWarning">User Name and/or Password is not recognised</div>
 <form [formGroup]="loginForm" (ngSubmit)="login()" ngnovalidate>
   <div class="mdl-dialog-content">
     <div class="form-group">
