--- a/src/app/admin/register-dialog/register-dialog.component.html
+++ b/src/app/admin/register-dialog/register-dialog.component.html
@@ -1,35 +1,35 @@
-<h1 class="mdl-dialog-title" style="text-align: center">Register User</h1>
+<h1 mat-dialog-title style="text-align: center">Register User</h1>
 <div class="warn"  *ngIf="registerFailure">{{registerFailure}}</div>
 <form [formGroup]="registerForm" (ngSubmit)="register()" ngnovalidate>
-  <div class="mdl-dialog-content">
+  <div mat-dialog-content>
     <div class="form-group">
-      <md-input-container style="width: 100%">
-        <input mdInput class="form-control" formControlName="firstName" placeholder="First Name">
-      </md-input-container>
+      <mat-form-field style="width: 100%">
+        <input matInput class="form-control" formControlName="firstName" placeholder="First Name">
+      </mat-form-field>
     </div>
     <div class="form-group">
-      <md-input-container style="width: 100%">
-        <input mdInput class="form-control" formControlName="lastName" placeholder="Last Name">
-      </md-input-container>
+      <mat-form-field style="width: 100%">
+        <input matInput class="form-control" formControlName="lastName" placeholder="Last Name">
+      </mat-form-field>
     </div>
     <div class="form-group">
-      <md-input-container hintLabel="Minimum 3 characters" style="width: 100%">
-        <input mdInput class="form-control" formControlName="userName" placeholder="User Name">
-        <md-error>User name must have 3 characters minimum</md-error>
-      </md-input-container>
+      <mat-form-field hintLabel="Minimum 3 characters" style="width: 100%">
+        <input matInput class="form-control" formControlName="userName" placeholder="User Name">
+        <mat-error>User name must have 3 characters minimum</mat-error>
+      </mat-form-field>
     </div>
     <div class="form-group">
-      <md-input-container hintLabel="Minimum 8 characters" style="width: 100%">
-        <input mdInput type="password" class="form-control" formControlName="password" placeholder="Password">
-      </md-input-container>
+      <mat-form-field hintLabel="Minimum 8 characters" style="width: 100%">
+        <input matInput type="password" class="form-control" formControlName="password" placeholder="Password">
+      </mat-form-field>
     </div>
   </div>
   <p></p>
-  <div class="mdl-dialog-actions" style="text-align: center">
-    <button md-raised-button color="primary" type="submit" [disabled]="!registerForm.valid" color="primary">Register</button>
-    <button md-button md-dialog-close=false>Cancel</button>
+  <div mat-dialog-actions style="text-align: center">
+    <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.valid" color="primary">Register</button>
+    <button mat-button mat-dialog-close=false>Cancel</button>
     <div *ngIf="loading">
-      <md-spinner></md-spinner>
+      <mat-progress-spinner></mat-progress-spinner>
     </div>
   </div>
 </form>
