Commenced adding global formatting.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,7 @@
 @import url(https://fonts.googleapis.com/icon?family=Roboto);
 
 body {
- font-family: Roboto;
+    margin: 0;
+    font-family: Roboto, sans-serif;
  }
+ 
